
  * Fix GNU_LD autodetection in configure.in
  * Eliminate C_INCLUDE_PATH from shell script wrapper
  * Use lisp rather than 'system touch' to make empty map file in
    compiler::link
  * fix small bug when info is passed bad second argument
  * Don't try to open map file if doesn't stat (macosx)
  * Add earlier forgotten branch patch to sfaslbfd.c for macosx

 -- Camm Maguire <camm@enhanced.com>  Sat, 20 Mar 2004 01:37:42 +0000

gcl (2.6.1-33) unstable; urgency=low

  * Remove extraneous symbols from plt.h, autodetect and correct for
    leading underscore in object symbols
  * complete readline version detection commit
  * Backport support for new eval-when keywords
  * Autodetect GNU ld and add -Wl,-Map only when appropriate

 -- Camm Maguire <camm@enhanced.com>  Wed, 10 Mar 2004 22:51:44 +0000

gcl (2.6.1-32) unstable; urgency=low

  * Try to automatically determine the form used for the explicitly
    compiled in external function addresses in plt.c
  * No need to explicitly write cr-lf on windows
  * Autodetection of machine on FreeBSD
  * Updated defs and h files for FreeBSD courtesy of Mark Murray
  * Minor ifdefs needed for FreeBSD
  * Refer to exported non-static C stub of fSmake_vector1 in plt.c
    (needed on ia64)
  * Readline 4.1/4.3 configure magic

 -- Camm Maguire <camm@enhanced.com>  Tue,  9 Mar 2004 01:58:43 +0000

gcl (2.6.1-31) unstable; urgency=low

  * Adjustments to vs_top reset logic to clear (hopefully last)
    remaining bug found by the random-tester
  * Allow args-info-referred-vars to match replaced vars, clearing bug
    report submitted by Matt Kauffman
  * Rework plt code yet again to be compatible with compiler::link for
    axiom, and mingw32

 -- Camm Maguire <camm@enhanced.com>  Mon,  8 Mar 2004 12:16:46 +0000

gcl (2.6.1-30) unstable; urgency=low

  * Fix rsym generated symbol tables for 64 bit platforms
  * Make sure 'unwind' in frame.c does nt go below frs_org