@@ -7,8 +7,9 @@ gcl (2.6.1-34) unstable; urgency=low
   * fix small bug when info is passed bad second argument
   * Don't try to open map file if doesn't stat (macosx)
   * Add earlier forgotten branch patch to sfaslbfd.c for macosx
+  * Backport new eval-when keyword support from 2.7 to run random tester
 
- -- Camm Maguire <camm@enhanced.com>  Sat, 20 Mar 2004 01:37:42 +0000
+ -- Camm Maguire <camm@enhanced.com>  Sat, 20 Mar 2004 01:47:01 +0000
 
 gcl (2.6.1-33) unstable; urgency=low
 
